Uploaded image for project: 'Qpid Proton'
  1. Qpid Proton
  2. PROTON-676

proton-c: transport layer SSL failures not propagated back to Messenger in pni_connection_readable

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Closed
    • Major
    • Resolution: Fixed
    • proton-0.7
    • proton-0.8
    • proton-c
    • None

    Description

      When an ssl failure occurs during connection at the transport layer the error is not propagated back to messenger (it is ignored).

      Patch attached.

      Attachments

        Activity

          People

            rhs Rafael H. Schloming
            dnwe Dominic Evans
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: