PROTON-676: patch from dominic for setter for SSL peer authentication mode

git-svn-id: https://svn.apache.org/repos/asf/qpid/proton/trunk@1626980 13f79535-47bb-0310-9956-ffa450edef68